codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_picker_refreshes_service_tier_controls.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: "normalize_snapshot_paths(render_bottom_popup(&chat, 80))"
---
› /fast

  gpt-5.4 default · /tmp/project · Read Only
